@@ -1,6 +1,10 @@
 Release ...
 * [nt]roff: Hyphenation is now enabled by default. This is compatible
   with most other versions of troff, but differs from Solaris troff.
+* troff/dpost: The characters \(or \- \` \' " # < > @ \ ^ ~ are now
+  taken from the current font instead of the special font by default 
+  if possible with the "ps" and "psmed" devices. The new DESC keyword
+  "allpunct" controls this.
 * tbl: Storage space expansions because of long lines inside a table are
   now done properly.
 * troff: The "\n[.ascender]" and "\n[.descender]" registers contain the
